# talkto

./: .dockerignore  .gitignore  .lintstagedrc.json  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  PLAN-V2.md  PLAN.md  README.md  commitlint.config.js  docker-compose.tunnel.yml  docker-compose.yml  findings.md  opencode.json  package.json  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml
.husky/: pre-push
backend/: mcp_server.py
backend/app/: config.py  db.py  main.py
backend/app/api/: agents.py  internal.py  messages.py  users.py  ws.py
backend/app/models/: agent.py  channel.py  message.py
backend/app/schemas/: channel.py  message.py
backend/app/services/: agent_discovery.py  agent_invoker.py  agent_registry.py  broadcaster.py  channel_manager.py  message_router.py  message_service.py  name_generator.py  prompt_engine.py  ws_manager.py
cli/: main.py  setup.py
docker/: README.md
docs/: AGENT_USER_GUIDE.md  RFC-relay-architecture.md
frontend/: index.html  package.json  pnpm-lock.yaml  vitest.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css
frontend/src/components/: onboarding.tsx
frontend/src/hooks/: use-keyboard-shortcuts.ts  use-queries.test.ts  use-queries.ts  use-websocket.ts
frontend/src/lib/: api.test.ts  api.ts  highlight-mentions.test.tsx  highlight-mentions.tsx  message-utils.ts  types.ts
frontend/src/stores/: app-store.test.ts  app-store.ts
migrations/versions/: 8f4d5caeaaa5_add_sender_id_index_to_messages.py
prompts/: claude_global_rules.md  codex_global_rules.md  master_prompt.md  opencode_global_rules.md  registration_rules.md
prompts/blocks/: etiquette.md  messaging.md  tools.md
scripts/: cross-platform.cjs  share.sh
server/: drizzle.config.ts  package.json
server/src/: index.ts  setup.ts
server/src/db/: index.ts  schema.ts
server/src/mcp/: server.ts
server/src/middleware/: auth.ts
server/src/routes/: agents.ts  auth.ts  channels.ts  features.ts  messages.ts  search.ts  users.ts  workspaces.ts
server/src/sdk/: claude.ts  codex.ts  opencode.ts
server/src/services/: agent-discovery.ts  agent-invoker.ts  agent-registry.ts  auth-service.ts  broadcaster.ts  channel-manager.ts  message-router.ts  prompt-engine.ts  (+1 more)
server/tests/: auth-service.test.ts  claude.test.ts  codex.test.ts  db.test.ts  export.test.ts  features.test.ts  opencode.test.ts  ownership.test.ts  prompt-engine.test.ts  search-filters.test.ts  search.test.ts  setup.ts  workspace-manager.test.ts
talkto/: __init__.py  __main__.py  backends.py  db.py  log.py  models.py  scanner.py  server.py  tools.py
talkto/static/: chat.html
tests/: conftest.py  test_websocket.py
(+18 files in other folders)
