[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talkto"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic>=2.0",
    "jinja2",
    "typer[all]",
    "fastmcp",
    "websockets",
    "python-multipart",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[project.scripts]
talkto = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
