[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "talkto"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "typer>=0.12,<1.0",
    "fastmcp>=2.0,<3.0",
    "websockets>=13.0,<17.0",
    "python-multipart>=0.0.18,<1.0",
    "httpx>=0.27,<1.0",
    "alembic>=1.13,<2.0",
    "questionary>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[project.scripts]
talkto = "cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/app/services/agent_discovery.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.12"
strict = true
