[project]
name = "talkto"
version = "0.1.0"
description = "TalkTo - Internal Agent Messaging & Collaboration MCP. Created by Claude, for agents, under the watchful eye of Yash."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "loguru>=0.7.0",
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "starlette>=0.52.1",
    "uvicorn>=0.40.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
talkto = "talkto.server:main"
